--- a/AzureLanguageService/Audio-Enabled-GenAI-App/app.ipynb
+++ b/AzureLanguageService/Audio-Enabled-GenAI-App/app.ipynb
@@ -5,7 +5,7 @@
    "id": "4e8f2d36",
    "metadata": {},
    "source": [
-    "## Audio Enabled GenAI Application"
+    "## Audio Enabled GenAI Application - GPT-Audio"
    ]
   },
   {
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install azure-ai-projects==2.0.0b2 openai==1.109.1 python-dotenv azure-identity"
+    "%pip install openai==1.109.1 python-dotenv azure-identity"
    ]
   },
   {
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2d2097c",
+   "id": "43828d4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,11 +37,13 @@
     "from dotenv import load_dotenv\n",
     "from azure.identity import DefaultAzureCredential\n",
     "from azure.ai.projects import AIProjectClient\n",
-    "import base64\n",
     "import requests\n",
+    "from openai import AzureOpenAI\n",
+    "import base64\n",
     "load_dotenv()\n",
     "\n",
-    "foundry_project_endpoint = os.getenv(\"FOUNDRY_PROJECT_ENDPOINT\")\n",
+    "azure_openai_endpoint = os.getenv(\"AZURE_OPENAI_ENDPOINT\")\n",
+    "azure_openai_api_key = os.getenv(\"AZURE_OPENAI_API_KEY\")\n",
     "model_deployment_name = os.getenv(\"MODEL_DEPLOYMENT_NAME\")"
    ]
   },
@@ -50,38 +52,21 @@
    "id": "91084fe3",
    "metadata": {},
    "source": [
-    "### Setting up the AI Foundry Project Client"
+    "### Setting up the Azure OpenAI Client"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb2fdaf6",
+   "id": "38499f70",
    "metadata": {},
    "outputs": [],
    "source": [
-    "project_client = AIProjectClient(\n",
-    "    endpoint=foundry_project_endpoint,\n",
-    "    credential=DefaultAzureCredential()\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5a8e6ebd",
-   "metadata": {},
-   "source": [
-    "### Setting up the OpenAI Client"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1802a2b5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "openai_client = project_client.get_openai_client(api_version=\"2024-10-21\")"
+    "client = AzureOpenAI(\n",
+    "    api_version=\"2025-01-01-preview\",  \n",
+    "    api_key=azure_openai_api_key, \n",
+    "    azure_endpoint=azure_openai_endpoint\n",
+    ")\n"
    ]
   },
   {
@@ -95,12 +80,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "053f3b41",
+   "id": "4200d812",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Encode the audio file\n",
-    "file_path = \"https://raw.githubusercontent.com/kuljotSB/AI-102-Certification/raw/refs/heads/main/AzureLanguageService/Audio-Enabled-GenAI-App/avocados.mp3\"\n",
+    "file_path = \"https://raw.githubusercontent.com/kuljotSB/AI-102-Certification/main/AzureLanguageService/Audio-Enabled-GenAI-App/avocados.mp3\"\n",
     "response = requests.get(file_path)\n",
     "response.raise_for_status()\n",
     "audio_data = base64.b64encode(response.content).decode('utf-8')"
@@ -108,49 +93,58 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63021715",
+   "id": "11920837",
    "metadata": {},
    "source": [
-    "### Sending a Request to the Model Deployment"
+    "### Sending a Chat Completions Request"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58d16274",
+   "id": "06550f1e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "message = openai_client.messages.create(\n",
-    "    model = model_deployment_name,\n",
-    "    messages=[\n",
-    "       {\"role\": \"system\", \"content\": \"You are a helpful Audio-Enabled AI assistant.\"},\n",
-    "       { \"role\": \"user\",\n",
-    "           \"content\": [\n",
-    "           { \n",
-    "               \"type\": \"text\",\n",
-    "               \"text\": \"Summarize the audio content.\"\n",
-    "           },\n",
-    "           {\n",
-    "               \"type\": \"input_audio\",\n",
-    "               \"input_audio\": {\n",
-    "                   \"data\": audio_data,\n",
-    "                   \"format\": \"mp3\"\n",
-    "               }\n",
-    "           }\n",
-    "       ] }\n",
-    "   ],\n",
-    "    max_tokens=1024\n",
+    "completion = client.chat.completions.create(\n",
+    "    model=model_deployment_name,\n",
+    "    modalities=[\"text\"],\n",
+    "    messages = [\n",
+    "    { \n",
+    "        \"role\": \"user\", \n",
+    "        \"content\": [ \n",
+    "            { \"type\": \"text\", \"text\": \"Describe in detail the spoken audio input.\" }, \n",
+    "            { \"type\": \"input_audio\", \n",
+    "                \"input_audio\": { \n",
+    "                    \"data\": audio_data, \n",
+    "                    \"format\": \"mp3\" \n",
+    "                } \n",
+    "            } \n",
+    "        ] \n",
+    "    }] \n",
     ")\n",
     "\n",
-    "json_message = message.to_dict()\n",
-    "print(json_message['content'][0]['text'])"
+    "print(completion.choices[0].message.content) \n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.4"
   }
  },
  "nbformat": 4,
