--- a/AzureAIVision/Image-Analysis/image-analysis.ipynb
+++ b/AzureAIVision/Image-Analysis/image-analysis.ipynb
@@ -18,10 +18,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6a4bfee5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting azure-cognitiveservices-vision-computervision\n",
+      "  Downloading azure_cognitiveservices_vision_computervision-0.9.1-py2.py3-none-any.whl.metadata (9.4 kB)\n",
+      "Requirement already satisfied: msrest>=0.6.21 in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from azure-cognitiveservices-vision-computervision) (0.7.1)\n",
+      "Requirement already satisfied: azure-common~=1.1 in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from azure-cognitiveservices-vision-computervision) (1.1.28)\n",
+      "Requirement already satisfied: azure-core>=1.24.0 in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from msrest>=0.6.21->azure-cognitiveservices-vision-computervision) (1.36.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from msrest>=0.6.21->azure-cognitiveservices-vision-computervision) (2025.11.12)\n",
+      "Requirement already satisfied: isodate>=0.6.0 in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from msrest>=0.6.21->azure-cognitiveservices-vision-computervision) (0.7.2)\n",
+      "Requirement already satisfied: requests-oauthlib>=0.5.0 in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from msrest>=0.6.21->azure-cognitiveservices-vision-computervision) (2.0.0)\n",
+      "Requirement already satisfied: requests~=2.16 in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from msrest>=0.6.21->azure-cognitiveservices-vision-computervision) (2.32.5)\n",
+      "Requirement already satisfied: charset_normalizer<4,>=2 in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from requests~=2.16->msrest>=0.6.21->azure-cognitiveservices-vision-computervision) (3.4.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from requests~=2.16->msrest>=0.6.21->azure-cognitiveservices-vision-computervision) (3.11)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from requests~=2.16->msrest>=0.6.21->azure-cognitiveservices-vision-computervision) (2.6.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.6.0 in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from azure-core>=1.24.0->msrest>=0.6.21->azure-cognitiveservices-vision-computervision) (4.15.0)\n",
+      "Requirement already satisfied: oauthlib>=3.0.0 in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from requests-oauthlib>=0.5.0->msrest>=0.6.21->azure-cognitiveservices-vision-computervision) (3.2.2)\n",
+      "Downloading azure_cognitiveservices_vision_computervision-0.9.1-py2.py3-none-any.whl (36 kB)\n",
+      "Installing collected packages: azure-cognitiveservices-vision-computervision\n",
+      "Successfully installed azure-cognitiveservices-vision-computervision-0.9.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Ignoring invalid distribution ~ygments (C:\\Users\\Asus\\AppData\\Roaming\\Python\\Python313\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution ~ygments (C:\\Users\\Asus\\AppData\\Roaming\\Python\\Python313\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution ~ygments (C:\\Users\\Asus\\AppData\\Roaming\\Python\\Python313\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution ~ygments (C:\\Users\\Asus\\AppData\\Roaming\\Python\\Python313\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution ~ygments (C:\\Users\\Asus\\AppData\\Roaming\\Python\\Python313\\site-packages)\n",
+      "\n",
+      "[notice] A new release of pip is available: 25.1.1 -> 25.3\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install azure-cognitiveservices-vision-computervision"
    ]
@@ -36,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e2883efe",
    "metadata": {},
    "outputs": [],
@@ -59,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "dd8fabe9",
    "metadata": {},
    "outputs": [],
@@ -85,14 +124,24 @@
    "execution_count": null,
    "id": "aec90ac3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax. Perhaps you forgot a comma? (4097066964.py, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mVisualFeatureTypes.adult\u001b[39m\n    ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax. Perhaps you forgot a comma?\n"
+     ]
+    }
+   ],
    "source": [
     "features = [VisualFeatureTypes.description,\n",
     "            VisualFeatureTypes.tags,\n",
     "            VisualFeatureTypes.categories,\n",
     "            VisualFeatureTypes.brands,\n",
     "            VisualFeatureTypes.objects,\n",
-    "            VisualFeatureTypes.adult]"
+    "            VisualFeatureTypes.adult,\n",
+    "            VisualFeatureTypes.faces]"
    ]
   },
   {
@@ -110,13 +159,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "images_to_analyze"
+    "images_to_analyze = [\n",
+    "    \"https://raw.githubusercontent.com/kuljotSB/AI-102-Certification/main/AzureAIVision/Image-Analysis/Images/building.jpg\",\n",
+    "    \"https://raw.githubusercontent.com/kuljotSB/AI-102-Certification/main/AzureAIVision/Image-Analysis/Images/person.jpg\",\n",
+    "    \"https://raw.githubusercontent.com/kuljotSB/AI-102-Certification/main/AzureAIVision/Image-Analysis/Images/street.jpg\"\n",
+    "]\n",
+    "\n",
+    "for image_url in images_to_analyze:\n",
+    "    print(f\"\\nAnalyzing image: {image_url}\\n\")\n",
+    "\n",
+    "    # Analyze the image\n",
+    "    analysis = cv_client.analyze_image(image_url, visual_features=features)\n",
+    "    \n",
+    "    # Print the results\n",
+    "    print(\"Description captions:\")\n",
+    "    for caption in analysis.description.captions:\n",
+    "        print(f\"'{caption.text}' (confidence: {caption.confidence:.2f})\")\n",
+    "\n",
+    "    print(\"\\nTags:\")\n",
+    "    for tag in analysis.tags:\n",
+    "        print(f\"{tag.name} (confidence: {tag.confidence:.2f})\")\n",
+    "\n",
+    "    print(\"\\nCategories:\")\n",
+    "    for category in analysis.categories:\n",
+    "        print(f\"{category.name} (confidence: {category.score:.2f})\")\n",
+    "\n",
+    "    print(\"\\nBrands:\")\n",
+    "    for brand in analysis.brands:\n",
+    "        print(f\"{brand.name} (confidence: {brand.confidence:.2f})\")\n",
+    "\n",
+    "    print(\"\\nObjects:\")\n",
+    "    for obj in analysis.objects:\n",
+    "        rect = obj.rectangle\n",
+    "        print(f\"{obj.object_property} at location {rect.x},{rect.y},{rect.w},{rect.h} (confidence: {obj.confidence:.2f})\")\n",
+    "    \n",
+    "    print(\"\\nFaces:\")\n",
+    "    if not analysis.faces:\n",
+    "        print(\"No faces detected.\")\n",
+    "    else:\n",
+    "        for face in analysis.faces:\n",
+    "            rect = face.face_rectangle\n",
+    "            print(f\"Gender: {face.gender}, Age: {face.age}, Bounding box: \"\n",
+    "                f\"left={rect.left}, top={rect.top}, width={rect.width}, height={rect.height}\")"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.4"
   }
  },
  "nbformat": 4,
