added image analysis lab

--- a/AzureAIVision/Image-Analysis/image-analysis.ipynb
+++ b/AzureAIVision/Image-Analysis/image-analysis.ipynb
@@ -18,51 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6a4bfee5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting azure-cognitiveservices-vision-computervision\n",
-      "  Downloading azure_cognitiveservices_vision_computervision-0.9.1-py2.py3-none-any.whl.metadata (9.4 kB)\n",
-      "Requirement already satisfied: msrest>=0.6.21 in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from azure-cognitiveservices-vision-computervision) (0.7.1)\n",
-      "Requirement already satisfied: azure-common~=1.1 in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from azure-cognitiveservices-vision-computervision) (1.1.28)\n",
-      "Requirement already satisfied: azure-core>=1.24.0 in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from msrest>=0.6.21->azure-cognitiveservices-vision-computervision) (1.36.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from msrest>=0.6.21->azure-cognitiveservices-vision-computervision) (2025.11.12)\n",
-      "Requirement already satisfied: isodate>=0.6.0 in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from msrest>=0.6.21->azure-cognitiveservices-vision-computervision) (0.7.2)\n",
-      "Requirement already satisfied: requests-oauthlib>=0.5.0 in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from msrest>=0.6.21->azure-cognitiveservices-vision-computervision) (2.0.0)\n",
-      "Requirement already satisfied: requests~=2.16 in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from msrest>=0.6.21->azure-cognitiveservices-vision-computervision) (2.32.5)\n",
-      "Requirement already satisfied: charset_normalizer<4,>=2 in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from requests~=2.16->msrest>=0.6.21->azure-cognitiveservices-vision-computervision) (3.4.4)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from requests~=2.16->msrest>=0.6.21->azure-cognitiveservices-vision-computervision) (3.11)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from requests~=2.16->msrest>=0.6.21->azure-cognitiveservices-vision-computervision) (2.6.1)\n",
-      "Requirement already satisfied: typing-extensions>=4.6.0 in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from azure-core>=1.24.0->msrest>=0.6.21->azure-cognitiveservices-vision-computervision) (4.15.0)\n",
-      "Requirement already satisfied: oauthlib>=3.0.0 in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from requests-oauthlib>=0.5.0->msrest>=0.6.21->azure-cognitiveservices-vision-computervision) (3.2.2)\n",
-      "Downloading azure_cognitiveservices_vision_computervision-0.9.1-py2.py3-none-any.whl (36 kB)\n",
-      "Installing collected packages: azure-cognitiveservices-vision-computervision\n",
-      "Successfully installed azure-cognitiveservices-vision-computervision-0.9.1\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Ignoring invalid distribution ~ygments (C:\\Users\\Asus\\AppData\\Roaming\\Python\\Python313\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution ~ygments (C:\\Users\\Asus\\AppData\\Roaming\\Python\\Python313\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution ~ygments (C:\\Users\\Asus\\AppData\\Roaming\\Python\\Python313\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution ~ygments (C:\\Users\\Asus\\AppData\\Roaming\\Python\\Python313\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution ~ygments (C:\\Users\\Asus\\AppData\\Roaming\\Python\\Python313\\site-packages)\n",
-      "\n",
-      "[notice] A new release of pip is available: 25.1.1 -> 25.3\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%pip install azure-cognitiveservices-vision-computervision"
+    "%pip install azure-cognitiveservices-vision-computervision==0.9.1 pillow==10.4.0"
    ]
   },
   {
@@ -75,13 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e2883efe",
    "metadata": {},
    "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "import os\n",
+    "import time\n",
     "\n",
     "load_dotenv()\n",
     "cv_endpoint = os.getenv(\"CV_ENDPOINT\")\n",
@@ -98,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "dd8fabe9",
    "metadata": {},
    "outputs": [],
@@ -124,16 +86,7 @@
    "execution_count": null,
    "id": "aec90ac3",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Perhaps you forgot a comma? (4097066964.py, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mVisualFeatureTypes.adult\u001b[39m\n    ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax. Perhaps you forgot a comma?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "features = [VisualFeatureTypes.description,\n",
     "            VisualFeatureTypes.tags,\n",
@@ -201,6 +154,76 @@
     "            rect = face.face_rectangle\n",
     "            print(f\"Gender: {face.gender}, Age: {face.age}, Bounding box: \"\n",
     "                f\"left={rect.left}, top={rect.top}, width={rect.width}, height={rect.height}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "789a1827",
+   "metadata": {},
+   "source": [
+    "### Use the OCR Capability to Read Handwritten Text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cb05d15",
+   "metadata": {},
+   "source": [
+    "![handwritten.jpg](./Images/handwritten.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6332852b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from azure.cognitiveservices.vision.computervision.models import OperationStatusCodes\n",
+    "from PIL import Image, ImageDraw\n",
+    "from io import BytesIO\n",
+    "import requests\n",
+    "\n",
+    "ocr_image_url = \"https://raw.githubusercontent.com/kuljotSB/AI-102-Certification/main/AzureAIVision/Image-Analysis/Images/handwritten.png\"\n",
+    "\n",
+    "# Download image for drawing\n",
+    "response = requests.get(ocr_image_url)\n",
+    "original_image = Image.open(BytesIO(response.content)).convert(\"RGB\")\n",
+    "\n",
+    "# Call API with URL and raw response to get the operation location from headers\n",
+    "read_response = cv_client.read(ocr_image_url, raw=True)\n",
+    "read_operation_location = read_response.headers[\"Operation-Location\"]\n",
+    "operation_id = read_operation_location.split(\"/\")[-1]\n",
+    "\n",
+    "# Wait for the operation to complete\n",
+    "while True:\n",
+    "    read_result = cv_client.get_read_result(operation_id)\n",
+    "    if read_result.status not in ['notStarted', 'running']:\n",
+    "        break\n",
+    "    time.sleep(1)\n",
+    "\n",
+    "# Print the detected text, line by line\n",
+    "if read_result.status == OperationStatusCodes.succeeded:\n",
+    "    for text_result in read_result.analyze_result.read_results:\n",
+    "        for line in text_result.lines:\n",
+    "            print(line.text)\n",
+    "            print(\"Bounding box:\", line.bounding_box)\n",
+    "\n",
+    "# Draw bounding boxes\n",
+    "draw = ImageDraw.Draw(original_image)\n",
+    "if read_result.status == OperationStatusCodes.succeeded:\n",
+    "    for text_result in read_result.analyze_result.read_results:\n",
+    "        for line in text_result.lines:\n",
+    "            box = line.bounding_box  # [x1, y1, x2, y2, x3, y3, x4, y4]\n",
+    "            # Draw a polygon bounding the text line\n",
+    "            polygon = [(box[i], box[i + 1]) for i in range(0, len(box), 2)]\n",
+    "            draw.polygon(polygon, outline=\"red\", width=3)\n",
+    "\n",
+    "# Save and display image with bounding boxes\n",
+    "output_path = \"ocr_out.png\"\n",
+    "original_image.save(output_path)\n",
+    "original_image.show()\n",
+    "print(f\"OCR visualization saved as {output_path}\")"
    ]
   }
  ],
