--- a/AzureAIVision/Object-Detection/Train-Model.ipynb
+++ b/AzureAIVision/Object-Detection/Train-Model.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install azure-cognitiveservices-vision-customvision msrest"
+    "%pip install azure-cognitiveservices-vision-customvision==3.1.1 msrest==0.7.1"
    ]
   },
   {
