added model inferential code

--- a/AzureAIVision/Object-Detection/Model-Inferencing.ipynb
+++ b/AzureAIVision/Object-Detection/Model-Inferencing.ipynb
@@ -69,16 +69,47 @@
    "outputs": [],
    "source": [
     "images = [\n",
-    "    \"https://raw.githubusercontent.com/kuljotSB/AI-102-Certification/main/AzureAIVision/Image-Classification/Images/Test-Images/IMG_TEST_1.jpg\",\n",
-    "    \"https://raw.githubusercontent.com/kuljotSB/AI-102-Certification/main/AzureAIVision/Image-Classification/Images/Test-Images/IMG_TEST_2.jpg\",\n",
-    "    \"https://raw.githubusercontent.com/kuljotSB/AI-102-Certification/main/AzureAIVision/Image-Classification/Images/Test-Images/IMG_TEST_3.jpg\"\n",
-    "]"
+    "    \"https://raw.githubusercontent.com/kuljotSB/AI-102-Certification/main/AzureAIVision/Object-Detection/Testing-Images/image5.jpg\",\n",
+    "    \"https://raw.githubusercontent.com/kuljotSB/AI-102-Certification/main/AzureAIVision/Object-Detection/Testing-Images/image6.jpg\",\n",
+    "    \"https://raw.githubusercontent.com/kuljotSB/AI-102-Certification/main/AzureAIVision/Object-Detection/Testing-Images/image7.jpg\"\n",
+    "]\n",
+    "\n",
+    "# Filter predictions by confidence threshold (e.g., 0.5) and print clean results\n",
+    "CONFIDENCE_THRESHOLD = 0.8\n",
+    "for img_url in images:\n",
+    "    data = {\"Url\": img_url}\n",
+    "    response = requests.post(prediction_endpoint, headers=headers, json=data)\n",
+    "    results = response.json()\n",
+    "    print(f\"Results for image: {img_url}\")\n",
+    "    predictions = results.get('predictions', [])\n",
+    "    filtered = [p for p in predictions if p['probability'] >= CONFIDENCE_THRESHOLD]\n",
+    "    for pred in filtered:\n",
+    "        tag = pred['tagName']\n",
+    "        prob = pred['probability']\n",
+    "        bbox = pred['boundingBox']\n",
+    "        print(f\"{tag}: {prob:.2f}, box: {bbox}\")\n",
+    "    if not filtered:\n",
+    "        print(\"No objects detected above threshold.\")"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.4"
   }
  },
  "nbformat": 4,
