--- a/AzureAIVision/Vision-Enabled-GenAI-App/vision-app.ipynb
+++ b/AzureAIVision/Vision-Enabled-GenAI-App/vision-app.ipynb
@@ -195,11 +195,71 @@
     "# printing the final response\n",
     "print(completion.choices[0].message.content)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efba661c",
+   "metadata": {},
+   "source": [
+    "### Streaming Responses from the Azure OpenAI Service"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da685b28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_url = \"https://raw.githubusercontent.com/kuljotSB/AI-102-Certification/main/AzureAIVision/Vision-Enabled-GenAI-App/joker_interrogation_scene.png\"\n",
+    "\n",
+    "completion = client.chat.completions.create(\n",
+    "    model=model_deployment_name,\n",
+    "    messages=[\n",
+    "        {\n",
+    "            \"role\": \"system\",\n",
+    "            \"content\": \"You are Batman, the protector and Dark Knight of Gotham City\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"role\": \"user\",\n",
+    "            \"content\": [\n",
+    "                {\"type\": \"text\", \"text\": \"Tell me more about this image\"},\n",
+    "                {\n",
+    "                    \"type\": \"image_url\",\n",
+    "                    \"image_url\": {\n",
+    "                        \"url\": image_url\n",
+    "                    }\n",
+    "                }\n",
+    "            ]\n",
+    "        }\n",
+    "    ],\n",
+    "    temperature=0.7,\n",
+    "    stream=True\n",
+    ")\n",
+    "\n",
+    "for chunk in completion:\n",
+    "    if chunk.choices and chunk.choices[0].delta.content:\n",
+    "        print(chunk.choices[0].delta.content, end=\"\", flush=True)\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.4"
   }
  },
  "nbformat": 4,
