--- a/Information-Extraction/Azure-AI-Content-Understanding/Custom_Analyzer/testing.ipynb
+++ b/Information-Extraction/Azure-AI-Content-Understanding/Custom_Analyzer/testing.ipynb
@@ -107,6 +107,152 @@
     "except requests.RequestException as e:\n",
     "    print(f\"Error occurred: {e}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c7ba2af",
+   "metadata": {},
+   "source": [
+    "### Displaying Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1387c33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import textwrap\n",
+    "from datetime import datetime\n",
+    "from pathlib import Path\n",
+    "from typing import Any, Dict, Optional\n",
+    "\n",
+    "def _hr(char=\"─\", width=80):\n",
+    "    return char * width\n",
+    "\n",
+    "def _h(text: str, width=80):\n",
+    "    pad = \" \" * 2\n",
+    "    line = f\"{pad}{text.strip()} \"\n",
+    "    return f\"{_hr('=')} \\n{line}\\n{_hr('=')}\"\n",
+    "\n",
+    "def _subh(text: str):\n",
+    "    return f\"\\n{text}\\n{_hr()}\"\n",
+    "\n",
+    "def _kv(k: str, v: Any, k_width=22):\n",
+    "    k = (k or \"\").strip()\n",
+    "    if isinstance(v, (dict, list)):\n",
+    "        v_str = json.dumps(v, indent=2, ensure_ascii=False)\n",
+    "    else:\n",
+    "        v_str = \"\" if v is None else str(v)\n",
+    "    return f\"{k:<{k_width}} : {v_str}\"\n",
+    "\n",
+    "def _wrap_block(text: str, width=100, indent=\"    \"):\n",
+    "    if not text:\n",
+    "        return \"\"\n",
+    "    wrapped = textwrap.fill(text, width=width)\n",
+    "    return textwrap.indent(wrapped, indent)\n",
+    "\n",
+    "def display_document_analyzer_content_understanding_result(\n",
+    "    analysis_result: Dict[str, Any],\n",
+    "    save_markdown_path: Optional[str] = None,\n",
+    "    max_markdown_chars: int = 1200,\n",
+    "    width: int = 100,\n",
+    ") -> None:\n",
+    "    \"\"\"\n",
+    "    Pretty-prints Azure Content Understanding 'prebuilt-documentAnalyzer' result\n",
+    "    and optionally writes extracted Markdown to a file.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    analysis_result : dict\n",
+    "        The JSON-decoded response you printed as \"Analysis Result\".\n",
+    "    save_markdown_path : str | None\n",
+    "        If provided (e.g., 'analysis.md'), concatenated markdown from all contents\n",
+    "        will be written to this path.\n",
+    "    max_markdown_chars : int\n",
+    "        Truncate console preview of markdown to this many characters (file is not truncated).\n",
+    "    width : int\n",
+    "        Wrap width for console output.\n",
+    "    \"\"\"\n",
+    "    # top-level\n",
+    "    print(_h(\"Content Understanding • Analysis Summary\", width))\n",
+    "    print(_kv(\"Analysis ID\", analysis_result.get(\"id\")))\n",
+    "    print(_kv(\"Status\", analysis_result.get(\"status\")))\n",
+    "\n",
+    "    result = (analysis_result or {}).get(\"result\", {})\n",
+    "    usage = (analysis_result or {}).get(\"usage\", {})\n",
+    "    tokens = usage.get(\"tokens\", {}) if isinstance(usage, dict) else {}\n",
+    "\n",
+    "    print(_subh(\"Analyzer Info\"))\n",
+    "    print(_kv(\"Analyzer ID\", result.get(\"analyzerId\")))\n",
+    "    print(_kv(\"API Version\", result.get(\"apiVersion\")))\n",
+    "    created_at = result.get(\"createdAt\")\n",
+    "    try:\n",
+    "        created_at_local = (\n",
+    "            datetime.fromisoformat(created_at.replace(\"Z\", \"+00:00\")).astimezone().isoformat()\n",
+    "            if created_at else None\n",
+    "        )\n",
+    "    except Exception:\n",
+    "        created_at_local = created_at\n",
+    "    print(_kv(\"Created At (UTC)\", created_at))\n",
+    "    print(_kv(\"Created At (local)\", created_at_local))\n",
+    "    warnings = result.get(\"warnings\") or []\n",
+    "    print(_kv(\"Warnings\", f\"{len(warnings)}\"))\n",
+    "\n",
+    "    print(_subh(\"Usage\"))\n",
+    "    # note: the API you showed returns floats for tokens; just print raw\n",
+    "    for k in (\"contextualization\", \"input\", \"output\"):\n",
+    "        if k in tokens:\n",
+    "            print(_kv(f\"Tokens.{k}\", tokens.get(k)))\n",
+    "\n",
+    "    # contents\n",
+    "    contents = result.get(\"contents\") or []\n",
+    "    print(_subh(f\"Contents ({len(contents)})\"))\n",
+    "\n",
+    "    combined_md_parts = []\n",
+    "    for idx, item in enumerate(contents, start=1):\n",
+    "        kind = item.get(\"kind\")\n",
+    "        sp = item.get(\"startPageNumber\")\n",
+    "        ep = item.get(\"endPageNumber\")\n",
+    "        print(_hr())\n",
+    "        print(f\"[Content #{idx}] kind={kind}  pages={sp}–{ep}\")\n",
+    "\n",
+    "        # Fields block (generic)\n",
+    "        fields = (item.get(\"fields\") or {})\n",
+    "        if fields:\n",
+    "            print(\"• Fields:\")\n",
+    "            for fname, fval in fields.items():\n",
+    "                if isinstance(fval, dict):\n",
+    "                    ftype = fval.get(\"type\")\n",
+    "                    vstr = fval.get(\"valueString\") or fval.get(\"valueNumber\") or fval.get(\"valueBoolean\") or fval.get(\"valueArray\") or fval.get(\"valueObject\")\n",
+    "                    # fall back to full dict if none of the canonical keys exist\n",
+    "                    if vstr is None:\n",
+    "                        vstr = fval\n",
+    "                    print(_wrap_block(f\"  - {fname} ({ftype}): {vstr}\", width))\n",
+    "                else:\n",
+    "                    print(_wrap_block(f\"  - {fname}: {fval}\", width))\n",
+    "\n",
+    "        # Markdown preview\n",
+    "        md = item.get(\"markdown\") or \"\"\n",
+    "        combined_md_parts.append(md)\n",
+    "        preview = md.strip()\n",
+    "        preview_trunc = (preview[:max_markdown_chars] + \" … [truncated]\") if len(preview) > max_markdown_chars else preview\n",
+    "        print(\"• Markdown Preview:\")\n",
+    "        print(_wrap_block(preview_trunc, width))\n",
+    "\n",
+    "    # Save concatenated markdown if requested\n",
+    "    if save_markdown_path:\n",
+    "        all_md = \"\\n\\n---\\n\\n\".join(part for part in combined_md_parts if part)\n",
+    "        out_path = Path(save_markdown_path)\n",
+    "        out_path.parent.mkdir(parents=True, exist_ok=True)\n",
+    "        out_path.write_text(all_md, encoding=\"utf-8\")\n",
+    "        print(_subh(\"Files\"))\n",
+    "        print(_kv(\"Markdown saved\", str(out_path.resolve())))\n",
+    "\n",
+    "display_document_analyzer_content_understanding_result(document_analysis_result, save_markdown_path=\"document_analysis.md\")"
+   ]
   }
  ],
  "metadata": {
