Specify version for azure-cognitiveservices-speech

--- a/AzureSpeechService/TTS-STT-Translation/speech.ipynb
+++ b/AzureSpeechService/TTS-STT-Translation/speech.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install azure-cognitiveservices-speech"
+    "%pip install azure-cognitiveservices-speech==1.47.0"
    ]
   },
   {
