changed CLU inference code

--- a/AzureLanguageService/CLU/CLU.ipynb
+++ b/AzureLanguageService/CLU/CLU.ipynb
@@ -10,6 +10,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4fe50e0d",
+   "metadata": {},
+   "source": [
+    "### Installing Libraries and Utilities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68756352",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install azure-ai-language-conversations==1.1.0 azure-identity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "44bbd9ce",
    "metadata": {},
    "source": [
@@ -29,12 +47,35 @@
     "from dotenv import load_dotenv\n",
     "\n",
     "load_dotenv()\n",
-    "prediction_url = os.getenv('PRED_URL')\n",
-    "lang_key = os.getenv('LANG_KEY')\n",
-    "request_id=os.getenv('REQUEST_ID')\n",
-    "weather_api_key=os.getenv('WEATHER_API_KEY')\n",
-    "deployment=os.getenv('DEPLOYMENT')\n",
-    "project_name=os.getenv('PROJECT_NAME')"
+    "language_endpoint = os.getenv(\"LANGUAGE_ENDPOINT\")\n",
+    "language_key = os.getenv(\"LANGUAGE_KEY\")\n",
+    "project_name = os.getenv(\"PROJECT_NAME\")\n",
+    "deployment_name = os.getenv(\"DEPLOYMENT_NAME\")\n",
+    "weather_api_key = os.getenv(\"WEATHER_API_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10752134",
+   "metadata": {},
+   "source": [
+    "### Creating the CLU Client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3002f45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from azure.core.credentials import AzureKeyCredential\n",
+    "from azure.ai.language.conversations import ConversationAnalysisClient\n",
+    "\n",
+    "client = ConversationAnalysisClient(\n",
+    "    endpoint=language_endpoint,\n",
+    "    credential=AzureKeyCredential(language_key)\n",
+    ")"
    ]
   },
   {
@@ -87,13 +128,6 @@
     "        print(\"Exiting the chat. Goodbye!\")\n",
     "        break\n",
     "\n",
-    "    #defining the headers for our RESTful query\n",
-    "    headers={\n",
-    "        'Ocp-Apim-Subscription-Key':lang_key,\n",
-    "        'Apim-Request-Id':request_id,\n",
-    "        'Content-Type':'application/json'\n",
-    "    }\n",
-    "\n",
     "    #defining the body of our RESTful query\n",
     "    data = {\n",
     "        \"kind\": \"Conversation\",\n",
@@ -109,20 +143,17 @@
     "        \"parameters\": {\n",
     "            \"projectName\": project_name,\n",
     "            \"verbose\": True,\n",
-    "            \"deploymentName\": deployment,\n",
+    "            \"deploymentName\": deployment_name,\n",
     "            \"stringIndexType\": \"TextElement_V8\"\n",
     "        }\n",
     "    }\n",
     "\n",
     "    #making a call to our NLU model published with a prediction URL.\n",
-    "    response = requests.post(prediction_url, headers=headers, data=json.dumps(data))\n",
+    "    result = client.analyze_conversation(task=data)\n",
     "\n",
-    "    output=response.json()\n",
+    "    top_intent =result['result']['prediction']['topIntent']\n",
     "\n",
-    "\n",
-    "    top_intent =output['result']['prediction']['topIntent']\n",
-    "\n",
-    "    location=output['result']['prediction']['entities'][0]['text']\n",
+    "    location=result['result']['prediction']['entities'][0]['text']\n",
     "\n",
     "    if top_intent.lower() == 'getweather':\n",
     "        weather_info = get_weather(location)\n",
@@ -136,8 +167,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.4"
   }
  },
  "nbformat": 4,
