Pin azure-search-documents to version 11.7.0b2

--- a/Information-Extraction/AISearch/AI_Search.ipynb
+++ b/Information-Extraction/AISearch/AI_Search.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install azure-search-documents"
+    "%pip install azure-search-documents==11.7.0b2"
    ]
   },
   {
